# cognitive-neural-overlay

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cno/: __init__.py  app.py  audit.py  config.py  envelope.py  llm.py  logging_config.py  metadata.py  persistence.py  pipeline.py  sinks.py
cno/middleware/: __init__.py  auth.py  rate_limit.py
cno/nodes/: __init__.py  input_node.py  memory_node.py  output_synth.py  persona_node.py  router_node.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Console.tsx  Dashboard.tsx  api.ts  styles.css  widgets.tsx
frontend/src/__tests__/: api.test.ts  setup.ts  widgets.test.tsx
scripts/: backup_db.sh  run_prod.sh
tests/: conftest.py  test_app.py  test_audit.py  test_auth_and_rate_limit.py  test_backup.py  test_envelope.py  test_metadata.py  test_node_quality.py  test_per_node_and_stream.py  test_pipeline.py  test_sinks.py  test_stats.py
