[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-neural-overlay"
version = "0.1.0"
description = "5-node cognitive overlay (Input/Router/Memory/Persona/OutputSynth) per Sentinel Forge System Core Directive. CSTM_Lattice v1.0 aligned."
authors = [{ name = "Shannon Brian Kelly" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["cno*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
